[tool.poetry]
name = "sample-templates-beesbuzz"
version = "0.1.0"
description = ""
authors = ["fluffy <fluffy@beesbuzz.biz>"]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.0.4"
publ = {version="^0.7.9", extras=["auth"]}
python-memcached = "^1.59"
pushl = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
