[tool.poetry]
name = "sample-templates-beesbuzz"
version = "0.1.0"
description = ""
authors = ["fluffy <fluffy@beesbuzz.biz>"]

[tool.poetry.dependencies]
python = "^3.9.0"
gunicorn = "^22.0.0"
publ = {version = "^0.7.22", extras = ["auth", "search"]}
python-memcached = "^1.59"
pushl = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
